# autonomous_navigation

./: .gitignore  GUIA_SEGMENTACIÓN.odt  LICENSE  README.md  casi.py  frames_2025-10-25_17.35.25.gv  frames_2025-11-19_21.09.51.gv  lane_comparison_data1.csv  lane_comparison_data2.csv  lane_comparison_data3.csv  lane_comparison_data4.csv  lane_model_params.json  robot_data.csv  robot_data1.csv
ESP32/Robot_Odometry/: Robot_Odometry.ino  imu_reader.ino  microros_configuration.ino  motor_encoder_PID.ino
ESP32/Robot_Safety/: Robot_Safety.ino  current.ino  microros_configuration.ino  voltage.ino
ESP32/enc_motor/: enc_motor.ino
ESP32/imu_6050/: imu_6050.ino
ESP32/libraries/: readme.md
ESP32/libraries/GP2Y0E03_ESP32/: GP2Y0E03_ESP32.cpp  GP2Y0E03_ESP32.h
ESP32/libraries/SabertoothSimplified/: SabertoothSimplified.cpp  SabertoothSimplified.h
ESP32/libraries/imu_publisher/: imu_publisher.cpp  imu_publisher.h
ESP32/libraries/motorControl/: motorControl.cpp  motorControl.h
ESP32/libraries/odometry/: odometry.cpp  odometry.h
ESP32/sensor_Acs712/: sensor_Acs712.ino
ESP32/sensor_FZ0430/: sensor_FZ0430.ino  voltage.ino
ESP32/test_codes/LazoAbierto/: LazoAbierto.ino  microros_configuration.ino  motor_encoder_PID.ino
ESP32/test_codes/LazoCerrado/: LazoCerrado.ino  microros_configuration.ino  motor_encoder_PID.ino
ESP32/test_codes/MPU9250/: MPU9250.ino
ESP32/test_codes/Matlab/: DiseñoControladorPID.mlx  SintonizaciónPID.mlx  identificacion_motor.csv  identificacion_motorv1.csv  identificacion_motorv2.csv
ESP32/test_codes/Robot_Odometry_Micro_Serial/: Robot_Odometry_Micro_Serial.ino  imu_reader.ino  microros_configuration.ino  motor_encoder_PID.ino  serial_configuration.ino
ESP32/test_codes/Robot_Odometry_Serial/: Robot_Odometry_Serial.ino  imu_reader.ino  microros_configuration.ino  motor_encoder_PID.ino
ESP32/test_codes/Robot_Odometry_Simplify_Serial/: Robot_Odometry_Simplify_Serial.ino  imu_reader.ino  motor_encoder_PID.ino  serial_configuration.ino
ESP32/test_codes/Robot_Odometry_Simplify_Serial_MPU6500/: Robot_Odometry_Simplify_Serial_MPU6500.ino  imu_reader.ino
ESP32/test_codes/Robot_Safety_Micro_Serial/: Robot_Safety_Micro_Serial.ino  current.ino  microros_configuration.ino  serial_configuration.ino  voltage.ino
ESP32/test_codes/Robot_Safety_Simplify_Serial/: Robot_Safety_Simplify_Serial.ino  serial_configuration.ino  voltage.ino
ESP32/test_codes/enc_motor/: enc_motor.ino  motor_encoder_PID.ino
ESP32/test_codes/imu_6050/: imu_reader.ino
ESP32/test_codes/sensor_FZ0430/: sensor_FZ0430.ino
ESP32/test_codes/sharp_GP2Y0E03/: sharp_GP2Y0E03.ino
install/: local_setup.sh  setup.sh
log/: latest_build
runs/detect/train/: args.yaml  results.csv
src/camera_cpp_nodes/: CMakeLists.txt  package.xml
src/camera_cpp_nodes/launch/: perception_pipeline.launch.py
src/camera_cpp_nodes/src/: esp32.cpp
src/camera_cpp_nodes/src/camera/: camera.cpp  candidate_extractor.cpp  pixel_to_meter.cpp  yolop.cpp
src/cpp_nodes/: CMakeLists.txt  package.xml
src/cpp_nodes/launch/: perception_pipeline.launch.py
src/cpp_nodes/src/: esp32.cpp
src/cpp_nodes/src/camera/: camera.cpp  detect.cpp  extractor.cpp  object_to_meter.cpp  pixel_to_meter.cpp  segmenter.cpp  segmenter_to_meter.cpp  segmenter_twin.cpp  twinlite.cpp  yolop.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Detection.msg  DetectionArray.msg  Lane.msg  LaneArray.msg  LaneBoundary.msg  LaneLine.msg  LaneLines.msg  LaneModel.msg  NearbyOSMElements.msg  OSMElement.msg  ObjectInfo.msg  ObjectInfoArray.msg  PixelPoint.msg  SegmentationData.msg
src/drivers/robot_drivers/: package.xml  setup.cfg  setup.py
src/filter_ekf/: package.xml  setup.cfg  setup.py
src/filter_ekf/config/: dual_ekf_navsat.yaml  ekf.yaml  navsat_transform.yaml
src/filter_ekf/filter_ekf/: path_global.py  path_local.py  simulate_imu_odom.py  utm_map_origin.py
src/filter_ekf/launch/: dual_ekf_navsat.launch.py  ekf.launch.py
src/navigation_system/: package.xml  setup.py
src/navigation_system/launch/: navigation.launch.py
src/navigation_system/local_planner/: brain_controller.py  cmd_vel_fusion.py  controler_geometric.py  lane_local_path_extractor.py  lidar_lateral_bias.py  lidar_speed_limiter.py  nmpc_controller.py  osm_limiter.py  pursuit_controller.py  robust_controller.py
src/navigation_system/maps/: calles_casa.osm  casa.osm  espe_actualizado.osm  espe_actualizadov2.osm
src/navigation_system/path_planner/: global_path_map_to_odom.py  global_planner.py  goal_reached.py  matching.py  (+2 more)
src/perception_stack/: package.xml  setup.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_drivers/: package.xml  setup.py
src/saves/: all_routes_lane_analysis.npz  analyze_hsv_lab.py  analyze_seg_arrays.py  dashboard.py  ipm_offline.py  package.xml  rebuild_lane.py  rename_detection_files.py  setup.cfg  setup.py
src/system_management/: package.xml  setup.cfg  setup.py
src/system_management/gui/: __init__.py  download_leaflet_offline.sh  management_gui.py  ros_bridge.py  test.py
src/system_management/gui/config/: __init__.py  constants.py
src/system_management/gui/utils/: __init__.py  styles.py  styles_dark.py  styles_light.py
src/system_management/gui/widgets/: __init__.py  camera_widget.py  main_window.py  map_widget.py  sensor_monitor.py
src/system_management/launch/: dual_esp32_comunication.launch.py  management.launch.py  management_all_system.launch.py  others.launch.py  status.launch.py
src/system_management/others/: bridge_serial_control.py  bridge_serial_safety.py  esp32_safety.py  rele_combiner_node.py  unifier_control_comunication.py  unifier_safety_comunication.py
src/system_management/safety_controller/: camera_supervisor.py  components_supervisor.py  esp32_supervisor.py  gps_supervisor.py  master_supervisor.py  microros_agent_supervisor.py  rele_combiner_node.py  rplidar_supervisor.py  system_health.py  system_health_laptop.py  voltage_current_supervisor.py
src/system_management/test_code/: gui_lazo_cerrado.py  pruebas_osm.py  test_lazo_abierto.py
(+120 files in other folders)
